# gone-branches

./: Cargo.toml  README.md  extension.sh
.github/workflows/: push.yml  release.yml
src/: main.rs
